# SettingsManagerTemplate

./: CMakeLists.txt  checkboxfactory.cpp  checkboxfactory.h  colordialogfactory.cpp  colordialogfactory.h  comboboxfactory.cpp  comboboxfactory.h  filebrowsefactory.cpp  filebrowsefactory.h  lineeditfactory.cpp  lineeditfactory.h  main.cpp  pushbuttonfactory.cpp  pushbuttonfactory.h  settingscache.cpp  settingscache.h  settingscontrolfactory.cpp  settingscontrolfactory.h  settingsitem.cpp  settingsitem.h  settingswidgetbuilder.cpp  settingswidgetbuilder.h  settingswindow.cpp  settingswindow.h  spinboxfactory.cpp  spinboxfactory.h
